Fixed whitespace issue on bottom post links

--- a/sass/_posts.scss
+++ b/sass/_posts.scss
@@ -19,7 +19,7 @@
   }
   @media all and (min-width: $s-min) {
     padding: 0;
-    margin-bottom: 0;
+    margin-bottom: -20px;
     > ul {
       display: inline;
       width: 100%;
@@ -28,7 +28,7 @@
         padding: 0;
         display: inline-block;
         font-size: 0px;
-        width: 24%;
+        width: 25%;
         height: 300px;
       }
     }
