--- a/styles.css
+++ b/styles.css
@@ -345,7 +345,7 @@ body {
   @media all and (min-width: 768px) {
     .posts {
       padding: 0;
-      margin-bottom: 0; }
+      margin-bottom: -20px; }
       .posts > ul {
         display: inline;
         width: 100%; }
@@ -354,7 +354,7 @@ body {
           padding: 0;
           display: inline-block;
           font-size: 0px;
-          width: 24%;
+          width: 25%;
           height: 300px; } }
 
 .posts__sectionTitle {
